spacing issue

--- a/style.css
+++ b/style.css
@@ -353,10 +353,20 @@ body {
 
   .news-title {
     font-size: 1rem;
+    overflow: hidden;
+    text-overflow: clip;
+    display: -webkit-box;
+    -webkit-line-clamp: 4; /* number of lines to show */
+    -webkit-box-orient: vertical;
   }
 
   .overview {
     font-size: 0.8rem;
+    overflow: hidden;
+    text-overflow: clip;
+    display: -webkit-box;
+    -webkit-line-clamp: 4; /* number of lines to show */
+    -webkit-box-orient: vertical;
   }
 }
 
@@ -412,13 +422,6 @@ body {
     margin-left: 0.5rem;
     padding: 0.2rem;
   }
-
-  /* .back-to-top-container {
-    position: fixed;
-    right: 10px;
-    bottom: 30px;
-  }
-   */
 
   .back-to-top {
     padding: 0.5rem;
